--- a/style/header-appmain.css
+++ b/style/header-appmain.css
@@ -52,11 +52,11 @@ a.eng {
 .logo .btn-current-lang{
     position: absolute;
     bottom: -4px;
-    right: -44px
+    right: -32px
 }
 .circle1 .dual-lang {
     position: absolute;
-    bottom: -67px;
+    top: 0px;
     right: -20px;
   z-index: 2;
   border: #95a5a6 solid 1px;
