--- a/style/header-appmain.css
+++ b/style/header-appmain.css
@@ -19,6 +19,7 @@
 }
 .rotatory{
     transform: rotate(90deg) scale(0.8) translateX(3px);
+    transition: 0.5s;
     
  
 }
@@ -56,8 +57,8 @@ a.eng {
 }
 .circle1 .dual-lang {
     position: absolute;
-    top: 0px;
-    right: -20px;
+    top: 157px;
+    right: -30px;
   z-index: 2;
   border: #95a5a6 solid 1px;
   background-color:white;
